syntax = "proto3";

package holms.types.booking.rpc;
option csharp_namespace = "HOLMS.Types.Booking.RPC";
option go_package = "booking/rpc";

import "google/protobuf/empty.proto";
import "primitive/pb_inclusive_opsdate_range.proto";
import "booking/date_restriction.proto";

message RestrictionSvcGetRequest {	
	.holms.types.primitive.PbInclusiveOpsdateRange date_range = 1;
}

message RestrictionSvcGetResponse {
	repeated .holms.types.booking.DateRestriction restrictions = 1;
}

message RestrictionSvcUpdateRequest {
	repeated .holms.types.booking.DateRestriction restrictions = 1;
}

service RestrictionSvc {
	rpc Get (RestrictionSvcGetRequest) 
		returns (RestrictionSvcGetResponse);

	rpc UpdateRestrictions (RestrictionSvcUpdateRequest)
		returns (google.protobuf.Empty);
}
