syntax = "proto3";

package holms.types.booking.rpc;
option csharp_namespace = "HOLMS.Types.Folio.RPC";
option go_package = "folio/rpc";

import "google/protobuf/empty.proto";

service GuaranteeAuthorizerService {
    rpc AuthorizeForTenancy (google.protobuf.Empty)
        returns (google.protobuf.Empty);
}
