syntax = "proto3";

package holms.types.iam.rpc;
option csharp_namespace = "HOLMS.Types.IAM.RPC";
option go_package = "iam/rpc";

import "google/protobuf/empty.proto";
import "iam/client_instance.proto";

message ClientInstanceSvcEnumResponse { 
	repeated .holms.types.iam.ClientInstance instances = 1;
}

service ClientInstanceSvc {
	rpc All(google.protobuf.Empty) 
		returns (ClientInstanceSvcEnumResponse);

	rpc Update(.holms.types.iam.ClientInstance) 
		returns (.holms.types.iam.ClientInstance);
}
