syntax = "proto3";

package holms.types.money.rpc;
option csharp_namespace = "HOLMS.Types.Money.RPC";

import "google/protobuf/empty.proto";
import "money/account_assignments.proto";

service AccountAssignmentsSvc {
	rpc Get(.google.protobuf.Empty) 
		returns (.holms.types.money.AccountAssignments);

	rpc Set(.holms.types.money.AccountAssignments) 
		returns (.holms.types.money.AccountAssignments);
}

