syntax = "proto3";

package holms.types.money.rpc;
option csharp_namespace = "HOLMS.Types.Money.RPC";
option go_package = "money/rpc";

import "google/protobuf/empty.proto";
import "primitive/pb_inclusive_calendar_date_range.proto";
import "money/accounting/accounting_transaction_export_format.proto";
import "money/accounting/accounting_txn_export_status.proto";

message AccountTxnExportSvcUploadPropertyTransactionsInFormatRequest {
	.holms.types.money.accounting.AccountingTransactionExportFormat format = 1;
	.holms.types.primitive.PbInclusiveCalendarDateRange date_range = 3;
	bool update_last_run_date = 4;
}

service AccountingTxnSvc {
	rpc GetExportJobStatus(google.protobuf.Empty)
		returns (.holms.types.money.accounting.AccountingTxnExportStatus);

	rpc UploadPropertyTransactionsInFormat(AccountTxnExportSvcUploadPropertyTransactionsInFormatRequest)
		returns (google.protobuf.Empty);
}
