syntax = "proto3";

package holms.types.operations.rpc;
option csharp_namespace = "HOLMS.Types.Operations.RPC";
option go_package = "operations/rpc";

import "primitive/server_action_confirmation.proto";
import "google/protobuf/empty.proto";
import "operations/attractions/attraction_category.proto";

message AttractionCategorySvcMultipleCategoriesResponse {
	repeated .holms.types.operations.attractions.AttractionCategory categories = 1;
}

service AttractionCategorySvc {
	rpc All(google.protobuf.Empty) 
		returns (AttractionCategorySvcMultipleCategoriesResponse);

	rpc Create (.holms.types.operations.attractions.AttractionCategory)
		returns (.holms.types.operations.attractions.AttractionCategory);

	rpc Update (.holms.types.operations.attractions.AttractionCategory)
		returns (.holms.types.operations.attractions.AttractionCategory);

	rpc Delete (.holms.types.operations.attractions.AttractionCategory)
		returns (.holms.types.primitive.ServerActionConfirmation);
}
