syntax = "proto3";

package holms.types.primitive;
option csharp_namespace = "HOLMS.Types.Primitive";
option go_package = "primitive";

import "iam/staff_member_indicator.proto";

enum UserEntitlements {
	GET_SUPPLY_SNAPSHOT = 0;
	GET_ROOM_TYPES = 1;
	CHANGE_SYSTEM_SETTINGS = 2;
	PERFORM_BACKGROUND_JOB = 3;
	MANAGE_PRICING = 4;
	READ_USERS = 5;
	MANAGE_USERS = 6;
	MANAGE_SUPPLY = 7;
	MANAGE_RESERVATION = 8;
	MANAGE_INCIDENTAL_RESERVATION = 9;
	ADJUST_FOLIO = 10;
	MANAGE_MONEY = 11;
	MANAGE_GROUPS = 12;
	MANAGE_HOUSEKEEPING = 13;
	MANAGE_GUESTS = 14;
}

message SessionContext {
	string access_token = 1;
	string refresh_token = 2;
	string tenancy_name = 3;
	string user_name = 4;
	.holms.types.iam.StaffMemberIndicator user = 5;
	repeated UserEntitlements user_entitlements = 6;
	uint64 expires_in = 7;
}
