syntax = "proto3";

package holms.types.supply.rpc;
option csharp_namespace = "HOLMS.Types.Supply.RPC";
option go_package = "supply/rpc";

import "google/protobuf/empty.proto";
import "primitive/pb_inclusive_opsdate_range.proto";
import "supply/qualification.proto";

message QualificationSvcAllResponse {
	repeated .holms.types.supply.Qualification qualifications = 1;
}

service QualificationSvc {
	rpc All (google.protobuf.Empty) 
		returns (QualificationSvcAllResponse);

	rpc AllDuring (.holms.types.primitive.PbInclusiveOpsdateRange)
		returns (QualificationSvcAllResponse);
}
