syntax = "proto3";

package holms.types.tenancy_config.rpc;
option csharp_namespace = "HOLMS.Types.TenancyConfig.RPC";
option go_package = "tenancyconfig/rpc";

import "google/protobuf/empty.proto";
import "tenancy_config/reservation_status_colors.proto";

service ReservationStatusColorsSvc {
	rpc Get (google.protobuf.Empty) 
		returns (.holms.types.tenancy_config.ReservationStatusColors);

	rpc Set (.holms.types.tenancy_config.ReservationStatusColors) 
		returns (.holms.types.tenancy_config.ReservationStatusColors);
}
