syntax = "proto3";

package holms.types.tenancy_config.rpc;
option csharp_namespace = "HOLMS.Types.TenancyConfig.RPC";
option go_package = "tenancyconfig/rpc";

import "google/protobuf/empty.proto";
import "tenancy_config/room_status_settings.proto";

service RoomStatusSettingsSvc {
	rpc Get(google.protobuf.Empty) 
		returns (.holms.types.tenancy_config.RoomStatusSettings);

	rpc Set(.holms.types.tenancy_config.RoomStatusSettings)
		returns (.holms.types.tenancy_config.RoomStatusSettings);
}
